# Roguelike_Chess

./: CMakeLists.txt  README.md
res/: config.cfg  credits.txt
res/Graphics/: credits.txt  king credits.txt
res/Shaders/: light.frag
src/: Actor.cpp  Actor.hpp  Artifact.hpp  Controls.hpp  Crystal.cpp  Crystal.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Light.cpp  Light.hpp  MainMenu.cpp  MainMenu.hpp  MainMenuFuncs.cpp  MapGenerator.cpp  MapGenerator.hpp  Object.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  Resources.hpp  Settings.cpp  Settings.hpp  Torch.cpp  Torch.hpp  World.cpp  World.hpp  custom.hpp  main.cpp
